# desklift

./: .travis.yml  README.md
.circleci/: config.yml
boards/: boards.lp
boards/bottom/: board.lp
boards/default/: board.lp
boards/other_routing/: board.lp
circuit/: circuit.lp
firmware/: Cargo.toml  README.md  openocd.sh  test.sh
firmware/.cargo/: config
firmware/desklift_command/: Cargo.toml
firmware/desklift_command/src/: lib.rs
firmware/ringthing/: Cargo.toml
firmware/ringthing/src/: index.rs  lib.rs  ringbuf.rs
firmware/src/: main.rs  main.rs.old
output/v1/gerber/: desklift.gbl  desklift.gbo  desklift.gbs  desklift.gm1  desklift.gtl  desklift.gto  desklift.gts  desklift.txt
output/v2/gcode/: copper.gcode  drills.gcode  flatcam_project.json  outlines.gcode
output/v2/gerber/: desklift.gbl  desklift.gbo  desklift.gbs  desklift.gm1  desklift.gtl  desklift.gto  desklift.gts  desklift.txt
output/v3/gerber/: desklift_COPPER-BOTTOM.gbr  desklift_COPPER-TOP.gbr  desklift_DRILLS.drl  desklift_OUTLINES.gbr  desklift_SILKSCREEN-BOTTOM.gbr  desklift_SILKSCREEN-TOP.gbr  desklift_SOLDERMASK-BOTTOM.gbr  desklift_SOLDERMASK-TOP.gbr
project/: metadata.lp
schematics/main/: schematic.lp
software/: desklift.py  desklift_test.py
