[package]
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
categories = ["embedded", "no-std"]
description = "Desk lift controller"
keywords = ["arm", "cortex-m"]
license = "MIT OR Apache-2.0"
name = "desklift"
repository = "https://github.com/dbrgn/desklift"
version = "0.1.0"
edition = "2018"

[features]
default = ["debug"]
debug = ["panic-semihosting", "cortex-m-semihosting"]

[dependencies]
cortex-m = "0.5"
cortex-m-rt = "0.6"
cortex-m-rtfm = "0.4.0-beta.3"
cortex-m-semihosting = { version = "0.3", optional = true }
nb = "0.1"
panic-semihosting = { version = "0.5", optional = true }
panic-halt = "0.2"
desklift_command = { path = "desklift_command" }

# Uncomment for the panic example.
# panic-itm = "0.1.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.4"

[dependencies.stm32f1]
features = ["stm32f103", "rt"]
version = "0.8.0"

[dependencies.stm32f1xx-hal]
features = ["stm32f103", "rt"]
version = "0.4.0"

[profile.release]
codegen-units = 1 # better optimizations
debug = true
lto = true # better optimizations
